# spark-streaming-study

./: pyproject.toml  requirements.txt
01_wordcount/: wordcount_python_version.py
02_batch/: join_dataframe_ex.py  join_ex.py  log_dataframe_ex.py  log_rdd_ex.py  log_sql_ex.py
wordcount/: wordcount_rdd_version.py  wordcount_sparksql_version.py
